1.3.0
 - feat: allow to define ancillary parameters for models and use them
   during fitting by default
 - feat: `Indentation.get_initial_fit_parameters` now automatically
   computes common and model-related ancillary parameters if no
   initial parameters are present
 - ref: use `idnt` to represent Indentation instances
1.2.4
 - enh: update boundaries and default values for model parameters
1.2.3
 - fix: FitProperties did not detect changes in "params_initial"
1.2.2
 - setup: bump afmformats version from 0.3.0 to 0.4.1
1.2.1
 - enh: skip computation of tip position if it is already in the
   dataset and cannot be computed e.g. due to missing spring constant
 - fix: typo in get_data_paths_enum
 - setup: bump afmformats version from 0.2.0 to 0.3.0
1.2.0
 - tests: np.asscalar is deprecated
 - ref: migrate to afmformats (#1)
 - docs: minor improvements
1.1.2
 - fix: add ``__version__`` property
 - tests: use time.perf_counter for timing tests
 - docs: improved LaTeX rendering
1.1.1
 - setup: migrate to PEP 517 (pyproject.toml)
 - docs: minor update
1.1.0
 - feat: add contact point to available features in qmap visualization
 - fix: avoid two invalid operations when computing features 
1.0.1
 - fix: invalid operation when loading data with a callback function
1.0.0
 - docs: minor update
0.9.3
 - enh: store nanite and h5py library versions in rating container
 - enh: update hyperparameters of rating regressors
 - ref: deprecation in h5py: replace dataset.value by dataset[...]
0.9.2
 - ref: renamed the mode `model_hertz_parabolic` to
   `model_hertz_paraboloidal` to be consistent
 - docs: updat code reference and other minor improvements
0.9.1
 - fix: `preprocessing` keyword not working in `Indentation.fit_model`
 - docs: add another scripting example and minor improvements
 - tests: increase coverage
0.9.0
 - ref: remove legacy "discrete" feature type
 - ref: renamed kwargs for `Indetation.rate_quality`